# matrix-codec

./: .gitignore  README.md  __main__.py  determinants.py  main.py  matrix-codec.py  matrix-equations.py  matrix-utils.py  parser.py  pyproject.toml  requirements.txt  utils.py
geometry/: __main__.py  main.py  vectors.py
mathutils/: __main__.py  parser.py
mathutils/geometry/: README.md  geometry.py  main.py  operations.py  relative_positions.py  vector.py  vectors.py
mathutils/matrices/: README.md  codec.py  determinants.py  main.py  operations.py  rank.py  utils.py
matrices/: README.md  __main__.py  codec.py  main.py
